[add] 1.增加llama3模型 2.修改分词器逻辑

--- a/notebook/generate.ipynb
+++ b/notebook/generate.ipynb
@@ -86,12 +86,27 @@
    "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-29T10:53:17.858166Z",
+     "start_time": "2024-11-29T10:53:17.680262Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "f586ac31d2a78daa"
+   "id": "f586ac31d2a78daa",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokenized result: ['è¿Ļæĺ¯', 'ä¸Ģä¸ª', 'ä¸Ńæĸĩ', 'åı¥', 'åŃĲ', '.']\n",
+      "Encoded result (token IDs): [128000, 114880, 48044, 108891, 106808, 45829, 13]\n",
+      "Decoded text: <|begin_of_text|>这是一个中文句子.\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   }
  ],
  "metadata": {
